--- a/css/style.css
+++ b/css/style.css
@@ -612,8 +612,8 @@ Global properties
 @media screen and (max-width: 640px) {
   .container {
 
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-      /*grid-template-rows: 1fr 1fr 1fr 0.5fr;*/
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr
+    ksjdnqkjdnqdn
   }
 }
 
